# EL-AMANECER-V4

./: .coverage  .env  .env.example  .gitignore  API_DOCUMENTATION.md  COMPONENTES_CEREBRALES_FALTANTES.md  INFORME_SISTEMA_CONSCIENCIA.md  Makefile  README.md  README_TEST_FIXES.md  ROADMAP_CONSCIENCIA_COMPLETO.md  SISTEMA_COMPLETADO.md  SISTEMA_CONSCIENCIA_OPERATIVO.md  activate_project.sh  chat_consciousness_terminal.py  claustrum_elamanecer_test.db  debug_full_integration.py  debug_import.py  debug_imports.py  debug_memory_import.py  debug_numpy_warning.py  demo_interactive.py  deploy_to_github.py  download_model.py  enhance_security.py  fix_double_encoding.py  fix_encoding.py  fix_large_files_deploy.py  force_clean_deploy.py  gamified_database.db  iit_debug.txt  improve_code_quality.py  launch_evolution.py  load_local_llm.py  openapi_schema.json  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  restart_clean.ps1  (+31 more)
.agent/: CHECKPOINT_4_STATUS.md  FINAL_ASSESSMENT.md  FINAL_STATUS.md
.github/workflows/: ci-cd-enterprise.yml  ci-cd-pipeline.yml  ci-cd.yml  dependency-monitor.yml  docs-automation.yml  enterprise-framework.yml  security-scan.yml
apps/frontend/: Chat_Editado_1.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/interfaces/: real_chat_interface.py
clients/: mcp_coordinator.py
config/: .encryption_key  .env.example  __init__.py  mcp_memory_training_data.json  nginx-waf.conf  rag_config.yaml  requirements-dev.txt  rotated_secrets.json  secure_config.py  security_config.json  settings.py  sheily_constitution.yml  sheily_token_config.json  sheily_token_deployment.json
config/authelia/: config.yml
config/blockchain/: sheily_token_metadata.json
config/core/: universal.yaml
config/database/: migrate_db.py  update_balance.py
config/enterprise/: enterprise_config.yaml
config/git/: .editorconfig  .gitignore  .pre-commit-config.yaml
config/nginx/: nginx-dashboard.conf
config/promtail/: config.yml
config/python/: pyproject.toml
consciousness/: __init__.py
database_utils/: __init__.py  gamified_database.py
docs/analysis/: ANALISIS_METRICAS_ESTRATEGIA.md  ANALISIS_PROYECTO_COMPLETO.md
docs/architecture/: ARQUITECTURA_DIAGRAMA.md  DEPLOYMENT_GUIDE.md  DOCUMENTACION_TECNICA_DETALLADA.md
docs/examples/: CHAT_CONSCIOUSNESS_TERMINAL.md  CONSCIOUS_PROMPT_GENERATOR.md
docs/reports/: FASE3_COMPLETADA.md  FASE4_COMPLETADA.md  FASE4_INTEGRADA.md  GEMMA_FIX_SUMMARY.md  RESUMEN_INTEGRACION_FINAL.md  VALORACION_ECONOMICA.md  WARNINGS_ELIMINADOS.md
infrastructure/docker/: docker-compose.yml
mlruns/0/: meta.yaml
n8n/workflows/: mcp_enterprise_monitoring_workflow.json  sheilys_learn_to_earn_workflow.json
production/services/: llm_conscious_service.py  memory_conscious_service.py  rag_conscious_service.py
scripts/: mcp_terminal_chat.py  test_integrations.py
temp/: check_self_awareness.py
tests/: __init__.py  conftest.py  diagnostico_testing.py
tests/consciousness/: test_teoria_mente_avanzada.py
tests/enterprise/: __init__.py  run_all_enterprise_tests.py  test_auto_improvement_enterprise.py  test_chaos_engineering.py  test_consciousness_integration.py  test_core_consciousness_suites.py  test_database_operations_enterprise.py  test_deployment_migration_enterprise.py  test_frontend_ui_enterprise.py  test_infrastructure_enterprise.py  test_integration_end_to_end_enterprise.py  test_mcp_integration_enterprise.py  test_n8n_workflow_enterprise.py  test_performance_benchmarks_enterprise.py  test_rag_enterprise_system.py  test_security_enterprise.py  test_training_system_enterprise.py
tools/: auto_training_system.py
tools/ai/: auto_training_system.py
tools/analysis/: analizar_conocimiento.py  analyze_pdfs.py  check_files.py  consulta_conocimiento.py  extract_project_files.py  generate_real_neural_weights.py  regenerar_raptor.py  verificacion_aprendizaje_completo.py  weightwatcher_analyzer.py
tools/audit/: audit_codebase.py  check_security_status.py  complete_project_audit.py  quick_check.py  read_audit_report.py
tools/automation/: enrich_all_datasets.py  generate_biotech_dataset.py
tools/backup/: automated_rollback.py  backup_tools.py
tools/common/: paths.py
tools/correctors/: complete_correction_workflow.py  complete_retraining.py  massive_adapter_correction.py  simple_retrain.py
tools/dependency_manager/: __init__.py  agent_orchestrator.py  cicd_integrator.py  cli_interface.py  database_controller.py  dependency_analyzer.py  enterprise_monitoring_controller.py  environment_manager.py  gitops_controller.py  infrastructure_manager.py  installation_orchestrator.py  optimization_engine.py  security_scanner.py  service_manager.py  update_manager.py  (+3 more)
(+244 files in other folders)
