[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B323", "B324", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701", "B702", "B703"]
skips = []

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.codespell]
skip = "*.po,*.ts,*.js,*.html,*.css,*.svg"
check-filenames = true

[tool.coverage.html]
directory = "htmlcov"
title = "Sheily AI Coverage Report"

[tool.coverage.json]
output = "coverage.json"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except ImportError",
    "except ModuleNotFoundError",
]
precision = 2
show_missing = true
skip_covered = false
skip_empty = false
sort = "cover"

[tool.coverage.run]
source = ["sheily_core", "sheily_train", "all-Branches", "tools", "sheily_core/api"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/migrations/*",
    "*/scripts/*",
    "*/docs/*",
    "*/.git/*",
    "*/node_modules/*",
    "*/build/*",
    "*/dist/*",
]
concurrency = ["thread", "multiprocessing"]
sigterm = true
branch = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.hypothesis]
max_examples = 1000
deadline = 10000
suppress_health_check = ["too_slow", "filter_too_much"]
phases = ["generate", "shrink", "explain"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mutmut]
paths_to_mutate = ["sheily_core", "sheily_train"]
tests_dir = ["centralized_tests"]
runner = "pytest"
use_coverage = true
dict_synonyms = ["Struct", "NamedStruct"]
allowed_imports_from_test_directory = ["conftest"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# Exclude backups directory which contains duplicate module filenames used for archival
# Exclude backups directory which contains duplicate module filenames used for archival
# Match both POSIX and Windows separators
exclude = "(?i)backups[\\/].*"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

[tool.pytest.ini_options]
testpaths = ["centralized_tests"]
python_files = ["test_*.py", "*_test.py", "test_*.pyi"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=sheily_core",
    "--cov=sheily_train",
    "--cov=all-Branches",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-report=json",
    "--cov-report=term-missing",
    "--cov-fail-under=80"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests (skip in CI)",
    "security: Security tests",
    "performance: Performance tests",
    "chaos: Chaos engineering tests",
    "contract: Contract tests",
    "mutation: Mutation testing",
    "property: Property-based tests",
    "e2e: End-to-end tests",
    "smoke: Smoke tests for quick validation"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

# Configuración adicional de calidad de código
# ===========================================
